src/pages/style/Landing.css
.landing-container {
  display: flex;
  overflow: hidden;
  flex-direction: column;
  align-items: center;

  .title {
    justify-self: center;
    width: 250px;

    padding: 10px 25px;

    border: var(--default-border);
    border-radius: var(--default-border-radius);
    box-shadow: var(--default-box-shadow);

    background-color: var(--card-background-color);
    background-color: var(--contrast-foreground);
  }

  .post-carousel {
    z-index: -1;

    display: flex;
    max-height: 400px;
    gap: 20px;

    /* TODO: prevent scroll off */

    animation: scroll 300s forwards linear infinite;

    .post-card {
      box-shadow: 5px 5px 5px 0 rgba(0, 0, 0, 0.371);
    }

    .username {
      visibility: hidden;
    }
  }

  .call-to-action {
    padding-bottom: 5px;
  }
}

@keyframes scroll {
  0% {
    transform: translateX(-150px) perspective(5000px) skewX(-8deg);
  }
  100% {
    transform: translateX(-4000px) perspective(5000px) skewX(-8deg);
  }
}

